[package]
name = "skater-boi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy-inspector-egui = "0.13"
bevy_rapier3d = "0.17"
leafwing-input-manager = "0.5"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false